--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MONGO_DB_URL = "MONGO_DB_DATABASE_URL"
-I18NEXUS_API_KEY="990417e3-2f92-42cd-9b85-0210a25cbb5e"
+I18NEXUS_API_KEY="-c5jwT6mKNYrVag0-llVcA"
 
